@startuml
abstract class AbstractFormatter {
{abstract} # format(node: AstNode)
}

class ContextMapperDslFormatter {
# format(node: AstNode)
}

interface ContextMapperFormatter {
+ format(node: T, formatter: NodeFormatter<T>)
}

class ContextMapperFormatterRegistry {
- _formatters: Map<string, ContextMapperFormatter<AstNode>>
+ get(node: AstNode): ContextMapperFormatter<AstNode> | undefined
}

AbstractFormatter <|-- ContextMapperDslFormatter
ContextMapperDslFormatter --> ContextMapperFormatterRegistry
ContextMapperFormatterRegistry o-- "0..*" ContextMapperFormatter

@enduml